--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/slyeargin/link-validator/issues"
   },
   "homepage": "https://github.com/slyeargin/link-validator#readme",
-  "dependencies": {},
+  "dependencies": {
+    "valid-url": "1.0.9"
+  },
   "devDependencies": {
     "mocha": "*",
     "chai": "*"
