--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A link validation utility using Node.js in the command line.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout=2000"
+    "test": "mocha --timeout=10000"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/slyeargin/link-validator#readme",
   "dependencies": {
-    "valid-url": "1.0.9"
+    "valid-url": "1.0.9",
+    "request": "2.81.0"
   },
   "devDependencies": {
     "mocha": "*",
